<resources>
    <string name="app_name">제5인격 지식백과</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="인격">필수인격</string>
    <string name="매크로">매크로</string>


    <string name="fragment1cf2">인격창 들어가는 법</string>
    <string name="fragment1cf2_1">오른 쪽 하단에 있는 책을 누른다.</string>
    <string name="fragment1cf2_2">책 속의 캐릭터를 누른다.</string>
    <string name="fragment1cf2_3">최고 인격은 120이며, 뉴비를 제외하고 대부분이 120인격을 갖추고 있다. 사진에서 보는 바와 같이 시계방향으로 가장 끝에 있는 인격을 12시, 3시,  6시, 9시라 부른다.</string>
    <string name="fragment1cf2_4">잠재특성 옆의 설정 버튼을 누른다.</string>
    <string name="fragment1cf2_5">책 속의 캐릭터를 누른다.</string>



    <string-array name="yonga">
        <item>그님티</item>
        <item>귀집</item>
        <item>디코</item>
        <item>맵맛플</item>
        <item>빠대</item>
        <item>빡커</item>
        <item>솔랭</item>
        <item>숨꼭</item>
        <item>아드각</item>
        <item>연커</item>
        <item>일겜</item>
        <item>의지</item>
        <item>패작</item>
        <item>할</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_Et">검색하고 싶은 용어를 입력해 주세요.</string>
</resources>
